--- a/client/style.css
+++ b/client/style.css
@@ -7,10 +7,6 @@
     --C5: rgb(0, 183, 199);
     --C6: rgb(35, 31, 32);
     --C7: rgb(99, 100, 102);
-
-    --bg-color: hsl(49 37% 94%);
-    --typewriterSpeed: 8s;
-    --typewriterCharacters: 62;
   }
 
 
@@ -26,7 +22,7 @@ body{
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  background-color: var(--C3);
+  background-color: white;
   margin-left: 10%;
   margin-right: 10%;
   /* margin-top: 0px; */
@@ -45,7 +41,7 @@ body{
  
 }
 #body-item{
-  background-color: var(--C0);
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 /*main and section*/
@@ -55,12 +51,17 @@ body{
 }
 
 .section {
-
   width: 20%;
-  padding: 30px;
-  border: green solid 5px;
   margin: 20px;
- 
+}
+
+.section-box {
+  font-size: 16px;
+	border: 8px solid;
+  padding: 5px;
+  margin-bottom:10px;
+	border-image: linear-gradient(to left, var(--C1), var(--C5)) 1 0 0 1;
+  
 }
 
 
@@ -90,7 +91,7 @@ justify-content: center;
     font-size: 16px;
     font-weight: 400;
     line-height: 35px;
-    margin: 0 0 2em;
+    margin: 15px;
     min-width: 100px;
     position: relative;
     text-decoration: none;
@@ -226,13 +227,14 @@ hr{
   box-shadow: 0px 0px 5px 5px black;
   margin:10px;
 }
-
-
-@media (min-width: 600px) {
-  .btn {
-    margin: 0 1em 2em;
-  }
+.subtitle{
+  margin:15px;
+  text-decoration: underline;
+  font-weight: bold;
+  font-size: 16px;
 }
+
+
 
 
 
