--- a/client/style.css
+++ b/client/style.css
@@ -233,12 +233,42 @@ hr{
   font-weight: bold;
   font-size: 16px;
 }
+/*Venue, Accommodation, Sightseeing,Travel */
 
+.section-box-image{
 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  background-image: url('img/hotel1.jpg');
+}
 
+.transparent-box {
+  margin: 05px;
+  background-color: #ffffff;
+  opacity: 0.9;
+}
 
+.transparent-box p {
+  margin: 5%;
+  font-weight: bold;
+  color: #000000;
+}
 
+.gallery img{
 
+  margin: 0% 10%;
+  aspect-ratio: 16 / 9;
+  box-shadow: 0px 0px 8px 8px var(--C4);
+}
+.gallery-big img{
+  width: 80%;
+}
+
+.gallery-small img{
+  margin: 30px;
+  width: 30%;
+}
 
 
 
