--- a/client/style.css
+++ b/client/style.css
@@ -36,7 +36,7 @@ body{
   background-color: white;
   margin-left: 10%;
   margin-right: 10%;
-  /* margin-top: 0px; */
+   margin-top: 0px; 
   /* border: 1px solid var(--C3);
   box-shadow: 0px 0px 5px 5px var(--C4); */
 }
@@ -57,13 +57,15 @@ body{
 
 /*main and section*/
 .main {
+  min-width: 400px;
   width: 60%;
   margin: 10px;
 }
 
 .section {
+  min-width: 220px;
   width: 20%;
-  margin: 20px;
+  margin: 10px;
 }
 
 .section-box {
@@ -278,7 +280,21 @@ hr{
 
 .gallery-small img{
   margin: 30px;
-  width: 30%;
+  width: 400px;
+  height: 275px;
+  border-radius: 10px;
+  object-position: center;
+}
+
+.image-box{
+  position: relative;
+}
+.image-text{
+  position: absolute;
+  color: white;
+  background-color: rgba(0,0,0,0.4);
+  top:79%;
+  left: 10%;
 }
 
 
