--- a/client/style.css
+++ b/client/style.css
@@ -285,6 +285,13 @@ hr{
   border-radius: 10px;
   object-position: center;
 }
+.gallery-speaker img{
+  margin: 30px;
+  width: 275px;
+  height: 400px;
+  border-radius: 10px;
+  object-position: center;
+}
 
 .image-box{
   position: relative;
@@ -296,6 +303,25 @@ hr{
   top:79%;
   left: 10%;
 }
+.image-text img{
+  width: 20px;
+  height: 20px;
+}
+.speaker-logo{
+  position: absolute;
+  top:79%;
+  left: 10%;
+  width: 100%;
+}
+.speaker-logo img{
+  background-color: white;
+  width: 30px;
+  height: 30px;
+}
+.speaker-logo:hover img{
+  box-shadow: 0px 0px 15px 15px var(--C4);
+}
+
 
 
 
